--- a/TTTUnturned.csproj
+++ b/TTTUnturned.csproj
@@ -77,8 +77,11 @@
     <Compile Include="Main.cs" />
     <Compile Include="Managers\LobbyManager.cs" />
     <Compile Include="Managers\RoleManager.cs" />
+    <Compile Include="Models\Classes\Config.cs" />
     <Compile Include="Models\Classes\Lobby.cs" />
     <Compile Include="Models\Classes\LobbyPlayer.cs" />
+    <Compile Include="Models\Classes\Map.cs" />
+    <Compile Include="Models\Classes\Spawn.cs" />
     <Compile Include="Models\Enums\LobbyState.cs" />
     <Compile Include="Models\Enums\PlayerRank.cs" />
     <Compile Include="Models\Enums\PlayerRole.cs" />
