--- a/TTTUnturned.csproj
+++ b/TTTUnturned.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Managers\ItemsManager.cs" />
     <Compile Include="Managers\LobbyManager.cs" />
     <Compile Include="Managers\RoleManager.cs" />
+    <Compile Include="Managers\RoundManager.cs" />
     <Compile Include="Models\Classes\Config.cs" />
     <Compile Include="Models\Classes\Lobby.cs" />
     <Compile Include="Models\Classes\LobbyPlayer.cs" />
