--- a/TTTUnturned.csproj
+++ b/TTTUnturned.csproj
@@ -79,7 +79,7 @@
     <Compile Include="Managers\ConfigManager.cs" />
     <Compile Include="Managers\ItemsManager.cs" />
     <Compile Include="Managers\LobbyManager.cs" />
-    <Compile Include="Managers\PlayerManager.cs" />
+    <Compile Include="Managers\PlayersManager.cs" />
     <Compile Include="Managers\RoleManager.cs" />
     <Compile Include="Managers\RoundManager.cs" />
     <Compile Include="Models\Classes\Config.cs" />
