--- a/TTTUnturned.csproj
+++ b/TTTUnturned.csproj
@@ -76,6 +76,8 @@
     <Compile Include="Commands\CommandDiscord.cs" />
     <Compile Include="Commands\CommandPos.cs" />
     <Compile Include="Main.cs" />
+    <Compile Include="Managers\DropManager.cs" />
+    <Compile Include="Managers\UIManager.cs" />
     <Compile Include="Managers\LevelConfigManager.cs" />
     <Compile Include="Managers\ItemManager.cs" />
     <Compile Include="Managers\LobbyManager.cs" />
