--- a/TTTUnturned.csproj
+++ b/TTTUnturned.csproj
@@ -73,28 +73,32 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Commands\CommandDiscord.cs" />
-    <Compile Include="Commands\CommandPos.cs" />
+    <Compile Include="API\Items\BarricadeItem.cs" />
+    <Compile Include="API\Items\ItemsManager.cs" />
+    <Compile Include="API\Commands\CommandDiscord.cs" />
+    <Compile Include="API\Commands\CommandPos.cs" />
+    <Compile Include="API\Items\C4\C4.cs" />
+    <Compile Include="API\Items\Item.cs" />
+    <Compile Include="API\Items\ItemType.cs" />
     <Compile Include="Main.cs" />
-    <Compile Include="Managers\C4Manager.cs" />
-    <Compile Include="Managers\DropManager.cs" />
-    <Compile Include="Managers\UIManager.cs" />
-    <Compile Include="Managers\LevelConfigManager.cs" />
-    <Compile Include="Managers\ItemManager.cs" />
-    <Compile Include="Managers\LobbyManager.cs" />
-    <Compile Include="Managers\PlayerManager.cs" />
-    <Compile Include="Managers\RoleManager.cs" />
-    <Compile Include="Managers\RoundManager.cs" />
-    <Compile Include="Models\Classes\C4.cs" />
-    <Compile Include="Models\Classes\Config.cs" />
-    <Compile Include="Models\Classes\Lobby.cs" />
-    <Compile Include="Models\Classes\LobbyPlayer.cs" />
-    <Compile Include="Models\Classes\Map.cs" />
-    <Compile Include="Models\Classes\Spawn.cs" />
-    <Compile Include="Models\Enums\LobbyState.cs" />
-    <Compile Include="Models\Enums\PlayerRank.cs" />
-    <Compile Include="Models\Enums\PlayerRole.cs" />
-    <Compile Include="Models\Enums\PlayerStatus.cs" />
+    <Compile Include="API\Items\C4\C4Manager.cs" />
+    <Compile Include="API\Players\DropManager.cs" />
+    <Compile Include="API\Interface\InterfaceManager.cs" />
+    <Compile Include="API\Level\LevelConfig.cs" />
+    <Compile Include="API\Level\ItemManager.cs" />
+    <Compile Include="API\Lobby\LobbyManager.cs" />
+    <Compile Include="API\Players\PlayersManager.cs" />
+    <Compile Include="API\Roles\RolesManager.cs" />
+    <Compile Include="API\Round\RoundManager.cs" />
+    <Compile Include="API\Level\SpawnsConfig.cs" />
+    <Compile Include="API\Lobby\LobbySession.cs" />
+    <Compile Include="API\Lobby\LobbyPlayer.cs" />
+    <Compile Include="API\Level\Map.cs" />
+    <Compile Include="API\Level\Spawn.cs" />
+    <Compile Include="API\Lobby\LobbyState.cs" />
+    <Compile Include="API\Players\PlayerRank.cs" />
+    <Compile Include="API\Roles\PlayerRole.cs" />
+    <Compile Include="API\Round\PlayerStatus.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\AsyncHelper.cs" />
     <Compile Include="Utils\ConfigHelper.cs" />
@@ -109,5 +113,6 @@
       <Version>2.0.2</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
