Remove and refactored all lobby classes

--- a/TTTUnturned.csproj
+++ b/TTTUnturned.csproj
@@ -81,25 +81,24 @@
     <Compile Include="API\Items\C4\C4.cs" />
     <Compile Include="API\Items\Item.cs" />
     <Compile Include="API\Items\ItemType.cs" />
+    <Compile Include="API\Round\RoundSession.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="API\Items\C4\C4Manager.cs" />
     <Compile Include="API\Players\DropManager.cs" />
     <Compile Include="API\Interface\InterfaceManager.cs" />
     <Compile Include="API\Level\LevelConfig.cs" />
     <Compile Include="API\Level\ItemManager.cs" />
-    <Compile Include="API\Lobby\LobbyManager.cs" />
-    <Compile Include="API\Players\PlayersManager.cs" />
-    <Compile Include="API\Roles\RolesManager.cs" />
+    <Compile Include="API\Players\PlayerManager.cs" />
+    <Compile Include="API\Roles\RoleManager.cs" />
     <Compile Include="API\Round\RoundManager.cs" />
     <Compile Include="API\Level\SpawnsConfig.cs" />
-    <Compile Include="API\Lobby\LobbySession.cs" />
-    <Compile Include="API\Lobby\LobbyPlayer.cs" />
+    <Compile Include="API\Players\TTTPlayer.cs" />
     <Compile Include="API\Level\Map.cs" />
     <Compile Include="API\Level\Spawn.cs" />
-    <Compile Include="API\Lobby\LobbyState.cs" />
-    <Compile Include="API\Players\PlayerRank.cs" />
-    <Compile Include="API\Roles\PlayerRole.cs" />
-    <Compile Include="API\Round\PlayerStatus.cs" />
+    <Compile Include="API\Round\RoundState.cs" />
+    <Compile Include="API\Players\Rank.cs" />
+    <Compile Include="API\Roles\Role.cs" />
+    <Compile Include="API\Roles\Status.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\AsyncHelper.cs" />
     <Compile Include="Utils\ConfigHelper.cs" />
