--- a/TTTUnturned.csproj
+++ b/TTTUnturned.csproj
@@ -98,7 +98,7 @@
     <Compile Include="API\Round\RoundState.cs" />
     <Compile Include="API\Players\Rank.cs" />
     <Compile Include="API\Roles\Role.cs" />
-    <Compile Include="API\Roles\Status.cs" />
+    <Compile Include="API\Players\Status.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\AsyncHelper.cs" />
     <Compile Include="Utils\ConfigHelper.cs" />
