--- a/TTTUnturned.csproj
+++ b/TTTUnturned.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FA00F989-9523-445D-84E1-7C2B4E990F2D}</ProjectGuid>
+    <ProjectGuid>{07CD695C-8FC8-4BBA-849D-C1186A22EB4A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>TTTUnturned</RootNamespace>
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="0Harmony, Version=2.0.2.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\Lib.Harmony.2.0.2\lib\net472\0Harmony.dll</HintPath>
+    </Reference>
     <Reference Include="Assembly-CSharp">
       <HintPath>D:\Unturned\Unturned_Data\Managed\Assembly-CSharp.dll</HintPath>
     </Reference>
@@ -41,19 +44,36 @@
       <HintPath>D:\Unturned\Unturned_Data\Managed\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Nito.AsyncEx.Context, Version=5.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>Lib\Nito.AsyncEx.Context.dll</HintPath>
+      <HintPath>packages\Nito.AsyncEx.Context.5.0.0\lib\netstandard2.0\Nito.AsyncEx.Context.dll</HintPath>
     </Reference>
     <Reference Include="Nito.AsyncEx.Tasks, Version=5.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>Lib\Nito.AsyncEx.Tasks.dll</HintPath>
+      <HintPath>packages\Nito.AsyncEx.Tasks.5.0.0\lib\netstandard2.0\Nito.AsyncEx.Tasks.dll</HintPath>
     </Reference>
-    <Reference Include="Nito.Disposables, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>Lib\Nito.Disposables.dll</HintPath>
+    <Reference Include="Nito.Disposables, Version=2.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\Nito.Disposables.2.1.0\lib\net461\Nito.Disposables.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Collections.Immutable, Version=1.2.5.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>packages\System.Collections.Immutable.1.7.1\lib\net461\System.Collections.Immutable.dll</HintPath>
+    </Reference>
     <Reference Include="System.Core" />
+    <Reference Include="System.Memory, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\System.Memory.4.5.4\lib\net461\System.Memory.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Numerics" />
+    <Reference Include="System.Numerics.Vectors, Version=4.1.4.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>packages\System.Numerics.Vectors.4.5.0\lib\net46\System.Numerics.Vectors.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=4.0.6.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>packages\System.Runtime.CompilerServices.Unsafe.4.7.1\lib\net461\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Runtime.InteropServices.RuntimeInformation" />
+    <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -63,40 +83,30 @@
     <Reference Include="UnityEngine">
       <HintPath>D:\Unturned\Unturned_Data\Managed\UnityEngine.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.AnimationModule, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>D:\Unturned\Unturned_Data\Managed\UnityEngine.AnimationModule.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>D:\Unturned\Unturned_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="API\Core\IObjectComponent.cs" />
-    <Compile Include="API\Items\BarricadeItem.cs" />
-    <Compile Include="API\Items\BombVest\BombVestManager.cs" />
-    <Compile Include="API\Items\BombVest\DoDamagePatch.cs" />
-    <Compile Include="API\Items\ItemsManager.cs" />
-    <Compile Include="API\Commands\CommandDiscord.cs" />
-    <Compile Include="API\Commands\CommandPos.cs" />
-    <Compile Include="API\Items\C4\C4.cs" />
-    <Compile Include="API\Items\Item.cs" />
-    <Compile Include="API\Items\ItemType.cs" />
-    <Compile Include="API\Items\SilencedPistol\SilencedPistol.cs" />
-    <Compile Include="API\Round\RoundSession.cs" />
-    <Compile Include="Main.cs" />
-    <Compile Include="API\Items\C4\C4Manager.cs" />
-    <Compile Include="API\Players\DropManager.cs" />
     <Compile Include="API\Interface\InterfaceManager.cs" />
-    <Compile Include="API\Level\LevelConfig.cs" />
     <Compile Include="API\Level\ItemManager.cs" />
-    <Compile Include="API\Players\PlayerManager.cs" />
-    <Compile Include="API\Roles\RoleManager.cs" />
-    <Compile Include="API\Round\RoundManager.cs" />
-    <Compile Include="API\Level\SpawnsConfig.cs" />
-    <Compile Include="API\Players\TTTPlayer.cs" />
     <Compile Include="API\Level\Map.cs" />
     <Compile Include="API\Level\Spawn.cs" />
+    <Compile Include="API\Level\SpawnConfig.cs" />
+    <Compile Include="API\Players\PlayerManager.cs" />
+    <Compile Include="API\Players\PlayerStatus.cs" />
+    <Compile Include="API\Players\TTTPlayer.cs" />
+    <Compile Include="API\Roles\PlayerRole.cs" />
+    <Compile Include="API\Roles\RoleManager.cs" />
+    <Compile Include="API\Round\RoundSession.cs" />
+    <Compile Include="API\Round\RoundManager.cs" />
     <Compile Include="API\Round\RoundState.cs" />
-    <Compile Include="API\Players\Rank.cs" />
-    <Compile Include="API\Roles\Role.cs" />
-    <Compile Include="API\Players\Status.cs" />
+    <Compile Include="Main.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\AsyncHelper.cs" />
     <Compile Include="Utils\ConfigHelper.cs" />
@@ -105,12 +115,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Lib.Harmony">
-      <Version>2.0.2</Version>
-    </PackageReference>
-  </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
